# minimal-clock

./: .gitignore  Cargo.toml  clock_config.json
crates/minimal-clock-core/: Cargo.toml
crates/minimal-clock-core/src/: lib.rs
src/: main.rs
